--- a/style.css
+++ b/style.css
@@ -1,4 +1,26 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 body {
+    background-color: orangered;
     display: grid;
     place-content: center;
+    gap: 2rem;
+    padding: 3rem;
+    font-family: Arial, Helvetica, sans-serif;
+}
+h1 {
+    color: orange;
+}
+
+
+ul {
+    list-style-type: none;
+    text-align: center;
+}
+li {
+    font-size: 4rem;
+
 }
